# gov-data

./: .gitignore  README.md  app.py  pyproject.toml
config/: data_config.yml
data/: 42131-0003-yearly_flat.csv
src/: data.py  destatis.py  load.py  preprocessing.py  search.py  stats.py  utils.py
